# RFdiffusion

./: .gitignore  pyproject.toml
env/: SE3nv.yml
rfdiffusion/: Track_module.py  diffusion.py  igso3.py  util.py
rfdiffusion/inference/: model_runners.py  utils.py
scripts/: run_inference.py
