[project]
name = "rfdiffusion"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "hydra-core",
    "opt-einsum",
    "e3nn",
    "pyrsistent",
    "dgl @ https://data.dgl.ai/wheels/torch-2.4/cu124/dgl-2.4.0%2Bcu124-cp312-cp312-manylinux1_x86_64.whl",
    "se3-transformer @ git+https://github.com/NVIDIA/DeepLearningExamples.git#subdirectory=DGLPyTorch/DrugDiscovery/SE3Transformer",
]
